--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </a>
     <div id="nav-bar">
         <a href="aboutMe.html">About Me</a>
-        <a href="portfolio.html">My Portfolio</a>
+        <a href="index.html">My Portfolio</a>
         <a href="signUp.html">Sign Up</a>
     </div>
     <h1>My Portfolio</h1>
